FIX: scrollbar styles && FIX: Dashboard page styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,29 @@ body.dark-mode {
     background-color: #0f172a;
     color: #ffffff;
 }
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 20px;
+
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+/* End Here */
